--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,20 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title></title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
-      <a href="/news/">News</a>
+    
     </nav>
-    <h1>{{ page.title }}</h1>
+    <h1></h1>
     <section>
       {{ content }}
     </section>
     <footer>
-      &copy; 2023
+      
     </footer>
   </body>
 </html>
